[project]
name = "earth2studio-polar"
version = "0.1.0"
description = "Sea-ice and Southern Ocean extensions for NVIDIA Earth2Studio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Xinlong Liu" }]
dependencies = [
    "earth2studio>=0.15",
    "xarray",
    "numpy",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earth2studio_polar"]
